--- a/style.css
+++ b/style.css
@@ -1,15 +1,35 @@
-div{
-    width: 300px;
-    border-style:solid;
-    border-width: 1px;
-    text-align: center;   
-    margin: 0 auto;
-}
-input{
-    width: 200px;
+body {
     text-align: center;
-    border-radius: 5px;
-}
-button{
-    width: 75px;
-}
+    background: linear-gradient(-45deg, #260e69, #490a80, #0a0b80, #ff3c5f);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
+    }
+    @keyframes gradient {
+    100% {
+    background-position: 100% 50%;
+    }
+     
+    100% {
+    background-position: 100% 50%;
+    }
+     
+    100% {
+    background-position: 100% 50%;
+    }
+    }
+    div{
+        width: 300px;
+        border-style:solid;
+        border-width: 1px;
+        text-align: center;   
+        margin: 0 auto;
+    }
+    input{
+        width: 200px;
+        text-align: center;
+        border-radius: 5px;
+    }
+    button{
+        width: 75px;
+    }
